feat(ims-server): implement refresh token controller
